--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -47,17 +47,11 @@
 				<button class="modal__close" aria-label="закрыть"></button>
 				<div class="modal__content">
 					<div class="card card_full">
-						<img
-							class="card__image"
-							src="<%=require('../images/Subtract.svg')%>"
-							alt=""
-						/>
+						<img class="card__image" src="<%=require('../images/Subtract.svg')%>" alt="" />
 						<div class="card__column">
 							<span class="card__category card__category_other">другое</span>
 							<h2 class="card__title">Бэкенд-антистресс</h2>
-							<p class="card__text">
-								Если планируете решать задачи в тренажёре, берите два.
-							</p>
+							<p class="card__text">Если планируете решать задачи в тренажёре, берите два.</p>
 							<div class="card__row">
 								<button class="button">В корзину</button>
 								<span class="card__price">1000 синапсов</span>
@@ -79,28 +73,19 @@
 								<span class="basket__item-index">1</span>
 								<span class="card__title">Фреймворк куки судьбы</span>
 								<span class="card__price">2500 синапсов</span>
-								<button
-									class="basket__item-delete"
-									aria-label="удалить"
-								></button>
+								<button class="basket__item-delete" aria-label="удалить"></button>
 							</li>
 							<li class="basket__item card card_compact">
 								<span class="basket__item-index">2</span>
 								<span class="card__title">+1 час в сутках</span>
 								<span class="card__price">750 синапсов</span>
-								<button
-									class="basket__item-delete"
-									aria-label="удалить"
-								></button>
+								<button class="basket__item-delete" aria-label="удалить"></button>
 							</li>
 							<li class="basket__item card card_compact">
 								<span class="basket__item-index">3</span>
 								<span class="card__title">БЭМ-пилюлька</span>
 								<span class="card__price">150 000 синапсов</span>
-								<button
-									class="basket__item-delete"
-									aria-label="удалить"
-								></button>
+								<button class="basket__item-delete" aria-label="удалить"></button>
 							</li>
 						</ul>
 						<div class="modal__actions">
@@ -121,21 +106,13 @@
 							<div class="order__field">
 								<h2 class="modal__title">Способ оплаты</h2>
 								<div class="order__buttons">
-									<button type="button" class="button button_alt">
-										Онлайн
-									</button>
-									<button type="button" class="button button_alt">
-										При получении
-									</button>
+									<button type="button" class="button button_alt">Онлайн</button>
+									<button type="button" class="button button_alt">При получении</button>
 								</div>
 							</div>
 							<label class="order__field">
 								<span class="form__label modal__title">Адрес доставки</span>
-								<input
-									class="form__input"
-									type="text"
-									placeholder="Введите адрес"
-								/>
+								<input class="form__input" type="text" placeholder="Введите адрес" />
 							</label>
 						</div>
 						<div class="modal__actions">
@@ -154,11 +131,7 @@
 						<div class="order">
 							<label class="order__field">
 								<span class="form__label modal__title">Email</span>
-								<input
-									class="form__input"
-									type="text"
-									placeholder="Введите Email"
-								/>
+								<input class="form__input" type="text" placeholder="Введите Email" />
 							</label>
 							<label class="order__field">
 								<span class="form__label modal__title">Телефон</span>
@@ -180,9 +153,7 @@
 					<div class="order-success">
 						<h2 class="film__title">Заказ оформлен</h2>
 						<p class="film__description">Списано 153 250 синапсов</p>
-						<button class="button order-success__close">
-							За новыми покупками!
-						</button>
+						<button class="button order-success__close">За новыми покупками!</button>
 					</div>
 				</div>
 			</div>
@@ -192,9 +163,7 @@
 			<div class="order-success">
 				<h2 class="order-success__title">Заказ оформлен</h2>
 				<p class="order-success__description">Списано 0 синапсов</p>
-				<button class="button order-success__close">
-					За новыми покупками!
-				</button>
+				<button class="button order-success__close">За новыми покупками!</button>
 			</div>
 		</template>
 
@@ -202,28 +171,18 @@
 			<button class="gallery__item card">
 				<span class="card__category card__category_soft">софт-скил</span>
 				<h2 class="card__title">+1 час в сутках</h2>
-				<img
-					class="card__image"
-					src="<%=require('../images/Subtract.svg')%>"
-					alt=""
-				/>
+				<img class="card__image" src="<%=require('../images/Subtract.svg')%>" alt="" />
 				<span class="card__price">750 синапсов</span>
 			</button>
 		</template>
 
 		<template id="card-preview">
 			<div class="card card_full">
-				<img
-					class="card__image"
-					src="<%=require('../images/Subtract.svg')%>"
-					alt=""
-				/>
+				<img class="card__image" src="<%=require('../images/Subtract.svg')%>" alt="" />
 				<div class="card__column">
 					<span class="card__category card__category_other">другое</span>
 					<h2 class="card__title">Бэкенд-антистресс</h2>
-					<p class="card__text">
-						Если планируете решать задачи в тренажёре, берите два.
-					</p>
+					<p class="card__text">Если планируете решать задачи в тренажёре, берите два.</p>
 					<div class="card__row">
 						<button class="button card__button">В корзину</button>
 						<span class="card__price">1000 синапсов</span>
@@ -237,10 +196,7 @@
 				<span class="basket__item-index">1</span>
 				<span class="card__title">Фреймворк куки судьбы</span>
 				<span class="card__price">2500 синапсов</span>
-				<button
-					class="basket__item-delete card__button"
-					aria-label="удалить"
-				></button>
+				<button class="basket__item-delete card__button" aria-label="удалить"></button>
 			</li>
 		</template>
 
@@ -261,28 +217,17 @@
 					<div class="order__field">
 						<h2 class="modal__title">Способ оплаты</h2>
 						<div class="order__buttons">
-							<button name="card" type="button" class="button button_alt">
-								Онлайн
-							</button>
-							<button name="cash" type="button" class="button button_alt">
-								При получении
-							</button>
+							<button name="card" type="button" class="button button_alt_active">Онлайн</button>
+							<button name="cash" type="button" class="button button_alt">При получении</button>
 						</div>
 					</div>
 					<label class="order__field">
 						<span class="form__label modal__title">Адрес доставки</span>
-						<input
-							name="address"
-							class="form__input"
-							type="text"
-							placeholder="Введите адрес"
-						/>
+						<input name="address" class="form__input" type="text" placeholder="Введите адрес" />
 					</label>
 				</div>
 				<div class="modal__actions">
-					<button type="submit" disabled class="button order__button">
-						Далее
-					</button>
+					<button type="submit" disabled class="button order__button">Далее</button>
 					<span class="form__errors"></span>
 				</div>
 			</form>
@@ -293,21 +238,11 @@
 				<div class="order">
 					<label class="order__field">
 						<span class="form__label modal__title">Email</span>
-						<input
-							name="email"
-							class="form__input"
-							type="text"
-							placeholder="Введите Email"
-						/>
+						<input name="email" class="form__input" type="text" placeholder="Введите Email" />
 					</label>
 					<label class="order__field">
 						<span class="form__label modal__title">Телефон</span>
-						<input
-							name="phone"
-							class="form__input"
-							type="text"
-							placeholder="+7 ("
-						/>
+						<input name="phone" class="form__input" type="text" placeholder="+7 (" />
 					</label>
 				</div>
 				<div class="modal__actions">
